--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-responsive-carousel": "^3.2.10",
     "react-scripts": "3.4.3",
     "semantic-ui-carousel-react": "^1.1.3",
     "semantic-ui-css": "^2.4.1",
